nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gozerok8s
  namespace: gozerok8s-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:             #规则
    - host: ingress.lzy.com   #域名
      http:
        paths:
          - path: /
            backend:
              serviceName: usercenter-api-svc       #关联service
              servicePort: 80              #关联service的映射端口
#          - path: /tomcat
#            backend:
#              serviceName: tomcat-svc      #关联service
#              servicePort: 8080                #关联service的映射端口
